# neuro-link-assistant

./: .gitignore  .pre-commit-config.yaml  AGENT.md  LICENSE  README_NEW_STRUCTURE.md  Show-DirTree.ps1  alembic.ini  analyze_dependencies.py  app.py  check_element_finder.py  compact_report.txt  config.py  conftest.py  docker-compose.yml  fix_migration.py  fix_token.py  globals.py  instructions UI.md  instructions.md  instructions.txt  plan.md  plan.test.md  project_structure.txt  pyproject.toml  pyproject.toml.backup  pytest.ini  readme.md  refactor_plan.py  report.html  requirements-dev.txt  requirements-optional.txt  requirements.txt  reset_migrations.py  routes.py  run_tests.ps1  setup.cfg  test_comparison.py  test_huggingface.py  test_results.txt  tests_structure.txt  (+1 more)
.github/workflows/: tests.yml
BASE_DIR/data/: ai_models.json
commands/: __init__.py  app_commands.py  assistant_commands.py  developer_commands.py  file_commands.py  media_commands.py  navigation_commands.py  smart_home_commands.py  system_commands.py  ui_commands.py  web_commands.py
core/: __init__.py  cli.py  component_registry.py  error_handler.py  globals.py  plugin_manager.py  system.py  system_initializer.py  task.py  task_manager.py
core/common/: __init__.py  error_handler.py  file_system.py
core/db/: connection.py  crud.py  models.py  transaction.py
core/filesystem/: __init__.py  factory.py  file_manager.py
core/input/: __init__.py  input_factory.py  keyboard_controller.py  keyboard_emulator.py  mouse_controller.py  mouse_emulator.py
core/input_deprecated/: __init__.py  input_factory.py  keyboard_controller.py  mouse_controller.py
core/llm/: __init__.py  action_planner.py  api_client.py  api_connector.py  error_handler.py  error_handling.py  prompt_processor.py  response_parser.py
core/process/: __init__.py
core/registry/: __init__.py
core/security/: __init__.py  jwt_handler.py  password.py
core/services/: __init__.py  ai_model_service.py  auth_service.py  permission_service.py  task_service.py  user_service.py
core/task/: __init__.py  auth_operations.py  base.py  file_operations.py  model_orchestration_operations.py  protocols.py  result.py  vision_operations.py  web_operations.py  windows_operations.py
core/utils/: __init__.py
core/vision/: __init__.py  element_localization.py  element_recognition.py  image_comparison.py  screen_capture.py  screen_changes.py
core/web/: __init__.py  browser_controller.py  element_finder.py
core/window/: __init__.py
core/windows/: __init__.py  file_system.py  filesystem_manager.py  process_manager.py  registry_manager.py  system_info.py  window_manager.py
data/: ai_models.json
docs/: architecture.md  new_interface_24062025.md
docs/api/: components.md  core.md  subsystems.md
docs/architecture/: components.md  interfaces.md  overview.md  subsystems.md
docs/development/: instructions UI.md  instructions.md  methodology.md  standards.md  testing.md  workflow.md
docs/guides/: contribution.md  setup.md  troubleshooting.md
docs/plans/: milestones.md  roadmap.md
init-scripts/: 01-init.sql
migrations/: env.py
migrations/versions/: 001f5f096665_increase_model_field_sizes.py  13ee2f4ed3bb_add_salt_column_to_users.py  23f71567fb29_add_chat_session_and_message_tables.py  343ecf78d9bf_add_huggingface_fields_to_ai_models.py  39c9f485f3ee_add_language_field_to_ai_models.py  52f69517b81e_add_all_missing_tables.py  5308b4d57cde_add_role_column_to_users.py  9409f9926cd0_fix_updated_at_constraint.py  97eaf3e5639a_manual_initial_migration.py  ab8cfc8817f6_add_missing_fields_to_ai_models.py  b0afe86a69c1_add_salt_column_only.py  d09550ca714f_add_role_column_to_users_fix.py
models/: command_models.py
routes/: api_routes.py  main_routes.py
routes/api/: __init__.py  ai_routes.py  analytics_routes.py  auth_routes.py  chat_routes.py  dependencies.py  system_routes.py  task_routes.py
scripts/: __init__.py  app_manager.py  base_test_runner.py  cleanup-ports.ps1  db.py  docker.py  port_cleanup.py  quick_check.py  run_affected_tests.py  test.py  test_app_manager.py  ui_test_runner.py
scripts/app/: __init__.py  health_check.py  manager.py
scripts/network/: __init__.py  connection_debugger.py  port_manager.py
scripts/testing/: __init__.py  affected_tests.py  base_runner.py  ui_runner.py
scripts/utils/: Show-DirTree-tests.ps1  analyze_dependencies.py
services/: __init__.py  ai_service.py  analytics_service.py  browser_service.py  command_service.py  huggingface_service.py  model_inference_service.py  system_monitor_service.py
static/css/: ai_models.css  command_form.css  dashboard.css  history.css  logs.css  main.css  modals.css  models_new.css  style.css
static/js/: ai_models.js  auth.js  command_form.js  dashboard.js  fixes.js  hf_search.js  history.js  main.js  modal-manager.js  models_new.js  utils.js
templates/: 404.html  500.html  analytics.html  base.html  browser.html  help.html  history.html  history_details.html  index.html  logs.html  model_settings.html  models.html  orchestrator.html  settings.html  task_create.html  task_details.html  tasks.html  workflows.html
templates/components/: ai_models.html  analytics_tabs.html  command_form.html  command_history.html  dashboard_status.html  hf_model_search.html  modals.html  quick_chat.html  recent_activities.html  system_monitor.html  task_results_analytics.html
tests/: conftest.py
tests/db/: conftest.py  test_connection.py  test_crud.py  test_migrations.py  test_pagination.py  test_performance.py  test_repository.py  test_security.py  test_transactions.py  test_validation.py
tests/integration/: test_db_services.py  test_system_initializer_auth.py
tests/scripts/: test_docker.py
tests/system/: test_application_workflow.py  test_authorization.py  test_computer_vision.py  test_file_operations.py  test_llm_integration.py  test_model_orchestration.py  test_plugin_system.py  test_task_management.py  test_web_automation.py  test_windows_automation.py
tests/utils/: check_element_finder.py  chrome_patch.txt  (+1 more)
utils/: helpers.py  log_maintenance.py  logging_utils.py
(+130 files in other folders)
