[tool.poetry]
name = "neuro-link-assistant"
version = "0.1.0"
description = "Интеллектуальный ассистент для работы с нейросетями"
authors = ["Dmitry Starikov"]
readme = "README.md"
license = "MIT"
packages = [{ include = "core" }, { include = "utils" }, { include = "routes" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["neurolink", "assistant", "ai"]

[tool.poetry.dependencies]
python = ">=3.8.1"
flask = ">=2.2.3"
werkzeug = ">=2.2.3"
selenium = ">=4.1.0"
requests = ">=2.26.0"
beautifulsoup4 = ">=4.10.0"
numpy = ">=1.21.0"
opencv-python = ">=4.5.3"
pillow = ">=8.3.2"
pyautogui = ">=0.9.53"
pynput = ">=1.7.6"
pygetwindow = ">=0.0.9"
psutil = ">=5.8.0"
pywin32 = { version = ">=301", markers = "sys_platform == 'win32'" }
WMI = { version = ">=1.5.1", markers = "sys_platform == 'win32'" }
python-dotenv = ">=0.19.0"
colorlog = ">=6.6.0"
webdriver-manager = ">=3.8.5"
pyttsx3 = "^2.98"
pytesseract = "^0.3.13"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.10.0"
pytest-xdist = ">=3.2.0"
pre-commit = ">=3.0.0"
black = ">=23.3.0"
pylint = ">=2.17.2"
isort = ">=5.12.0"
autoflake = ">=2.1.1"
flake8 = ">=6.0.0"
mypy = ">=1.3.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=6.1.3"
sphinx-rtd-theme = ">=1.2.0"

[tool.poetry.group.ml.dependencies]
torch = ">=2.0.0"
transformers = ">=4.28.1"

[tool.poetry.scripts]
neuro-assistant = "app:init_app"
test = "pytest:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=core --cov=utils --cov=routes --cov-report=term-missing --no-header --tb=native"
console_output_style = "classic"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
strict = true          # Включить все проверки типов

[tool.pylint.messages_control]
disable = [
    "C0111", # missing-docstring
    "C0103", # invalid-name
    "C0303", # trailing-whitespace
    "W0614", # unused-wildcard-import
    "W0401", # wildcard-import
    "W0703", # broad-except
    "E0611", # no-name-in-module
]

[tool.pylint.format]
max-line-length = 100

[tool.coverage.run]
source = ["core", "utils", "routes"]
omit = ["tests/*", "**/__init__.py"]
